--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">LMSAndroidApplication</string>
+    <string name="app_name">e-EdPort LMS</string>
     <string name="no_signal_icon">No Signal</string>
     <string name="check_your_connection">Check you internet connection</string>
     <string name="retry">retry</string>
